test: centralize post fixtures