@@ -1,6 +1,5 @@
 package com.fatmakahveci.blog.controllers;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -14,8 +13,13 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fatmakahveci.blog.model.Post;
-import com.fatmakahveci.blog.model.PostStatus;
 import com.fatmakahveci.blog.service.PostService;
+
+import static com.fatmakahveci.blog.support.PostFixtures.DEFAULT_SLUG;
+import static com.fatmakahveci.blog.support.PostFixtures.DEFAULT_TITLE;
+import static com.fatmakahveci.blog.support.PostFixtures.aDraftPost;
+import static com.fatmakahveci.blog.support.PostFixtures.aPost;
+import static com.fatmakahveci.blog.support.PostFixtures.aPublishedPost;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -37,20 +41,20 @@ class PostRestControllerITests {
 
     @Test
     void returnsPaginatedPosts() throws Exception {
-        Post post = new Post(1, "title", "content", Collections.emptySet());
+        Post post = aPost().build();
         given(postService.findAll(eq(""), any(Pageable.class), eq(false)))
                 .willReturn(new PageImpl<>(List.of(post)));
 
         mockMvc.perform(get("/api/posts"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content[0].title").value("title"))
+                .andExpect(jsonPath("$.content[0].title").value(DEFAULT_TITLE))
                 .andExpect(jsonPath("$.totalElements").value(1));
     }
 
     @Test
     void returnsEmptyPageWhenThereAreNoPosts() throws Exception {
         given(postService.findAll(eq(""), any(Pageable.class), eq(false)))
-                .willReturn(new PageImpl<>(Collections.emptyList()));
+                .willReturn(new PageImpl<>(List.of()));
 
         mockMvc.perform(get("/api/posts"))
                 .andExpect(status().isOk())
@@ -59,37 +63,30 @@ class PostRestControllerITests {
 
     @Test
     void returnsPublishedPostBySlug() throws Exception {
-        Post post = post("published-post", PostStatus.PUBLISHED);
-        given(postService.findBySlug("published-post")).willReturn(Optional.of(post));
+        Post post = aPublishedPost().build();
+        given(postService.findBySlug(DEFAULT_SLUG)).willReturn(Optional.of(post));
 
-        mockMvc.perform(get("/api/posts/published-post"))
+        mockMvc.perform(get("/api/posts/" + DEFAULT_SLUG))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.slug").value("published-post"));
+                .andExpect(jsonPath("$.slug").value(DEFAULT_SLUG));
     }
 
     @Test
     void hidesDraftFromAnonymousUsers() throws Exception {
-        Post post = post("draft-post", PostStatus.DRAFT);
-        given(postService.findBySlug("draft-post")).willReturn(Optional.of(post));
+        Post post = aDraftPost().build();
+        given(postService.findBySlug(DEFAULT_SLUG)).willReturn(Optional.of(post));
 
-        mockMvc.perform(get("/api/posts/draft-post"))
+        mockMvc.perform(get("/api/posts/" + DEFAULT_SLUG))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     void returnsDraftToAuthors() throws Exception {
-        Post post = post("draft-post", PostStatus.DRAFT);
-        given(postService.findBySlug("draft-post")).willReturn(Optional.of(post));
+        Post post = aDraftPost().build();
+        given(postService.findBySlug(DEFAULT_SLUG)).willReturn(Optional.of(post));
 
-        mockMvc.perform(get("/api/posts/draft-post").with(user("author").roles("AUTHOR")))
+        mockMvc.perform(get("/api/posts/" + DEFAULT_SLUG).with(user("author").roles("AUTHOR")))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.status").value("DRAFT"));
-    }
-
-    private Post post(String slug, PostStatus status) {
-        Post post = new Post(1, "title", "content", Collections.emptySet());
-        post.setSlug(slug);
-        post.setStatus(status);
-        return post;
     }
 }
